test_suite/tests/ui/remote/bad_remote.stderr
error: failed to parse path: "~~~"
  --> $DIR/tests/ui/remote/bad_remote.rs:10:18
   |
10 | #[serde(remote = "~~~")]
   |                  ^^^^^
